--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,7 @@
         {
             "type": "node",
             "request": "attach",
-            "name": "Remote Debug",
+            "name": "Attach to revProxy",
             "address": "localhost",
             "port": 6001,
         }
