--- a/package.json
+++ b/package.json
@@ -1,25 +1,21 @@
 {
   "name": "remote-debug",
   "version": "1.0.0",
-  "description": "",
+  "description": "revProxy Demo",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start:router": "ts-node src/router.ts",
-    "start:revProxy": "ts-node src/reversedProxy.ts",
-    "start:debug": "node --inspect=6969 -r ts-node/register src/mockAppserver.ts"
+    "start:revProxy": "ts-node src/reversedProxy.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "http-proxy": "^1.18.1",
-    "socket.io-client": "^4.5.1",
-    "ws": "^8.8.0"
+    "http-proxy": "^1.18.1"
   },
   "devDependencies": {
     "@types/http-proxy": "^1.17.9",
     "@types/node": "^17.0.43",
-    "@types/ws": "^8.5.3",
     "nodemon": "^2.0.16",
     "ts-node": "^10.8.1",
     "tslib": "^2.4.0",
